2002-05-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve parameters to mueller_multiple.

2002-05-01 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Don't truncate modes prematurely.
	            Improve stability.

2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Add support for turning off degenerate handling.

2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Rework handling of degenerate modes.

2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Only scale when tracking.

2002-04-30 Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

        * slabmode.cpp: Reset scaling after core region.

2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve portability.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.h: Remember kt.
	* slabmode.cpp: Dito.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Refactor, fix memory leak, fix tracing.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Make use of new interface for traceroot.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Fix typo.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Micro-optimise.

2002-02-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve definition of core and cladding (again).
	* slabdisp.cpp: Ditto.
	* slabdisp.h: Ditto.

2002-02-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve definition of core and cladding.
	* slabdisp.cpp: Ditto.
	
2002-01-29 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Update support for parameter getting/setting.

2001-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add support for parameter getting/setting.
	* slab.cpp: Ditto.