@@ -1,3 +1,9 @@
+2002-05-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+        * slabmode.cpp: Allow for backward calculation of fields.
+        * slabmode.h: Ditto.
+        * slab.cpp: Ditto.
+
 2002-05-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slab.cpp: Improve parameters to mueller_multiple.
